# auto_pilot

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
docs/: API.md  ER.md  arch-spec.md  llm-adpters.md
examples/: claude_compatible_provider.py  claude_direct_tool_example.py  claude_multiturn_conversation.py  claude_streaming_example.py  claude_streaming_tools_example.py  claude_structured_generate_example.py  claude_tools_example.py  conversation_log.txt  llm_adapter_usage.py
openspec/: project.md
src/auto_pilot/: __init__.py  config.py  database.py  init_db.py  main.py
src/auto_pilot/llm/: README.md  __init__.py  errors.py  types.py
src/auto_pilot/llm/adapters/: __init__.py  base.py  claude.py  factory.py  local.py  openai.py
src/auto_pilot/models/: __init__.py  agent.py  agent_tool.py  task.py  task_log.py  tool.py  tool_execution_log.py
src/auto_pilot/routers/: agents.py  tasks.py  tools.py
tests/: test_llm_adapter.py  test_main.py
tests/test_llm/: test_claude_integration.py
